Fix map height on iOS 26 floating search bar using 100dvh

--- a/css/style.css
+++ b/css/style.css
@@ -859,6 +859,7 @@ html.map-html,
 body.map-body {
   height: 100%;
   height: -webkit-fill-available;
+  height: 100dvh;
   width: 100%;
   background-color: var(--color-dark);
   overflow: hidden; /* Prevent native scrolling behind the map */
@@ -873,6 +874,7 @@ body.map-body {
   left: 0;
   right: 0;
   width: 100%;
+  height: 100dvh; /* iOS 26: extend behind floating bottom bar */
   box-sizing: border-box;
   background: var(--color-dark);
 }
